corrected the alignment in the 'options-bg' and 'customers' sections

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,57 +6,72 @@
   background-image: url("../imgs/backgrounds/landing.jpg");
   padding: 150px;
   background-size: cover;
-  text-align: center;
   background-attachment: fixed;
+  align-items: center;
+  text-align: center;
 }
 
 #breakfast {
-  background: url("../imgs/foodtop/breakfast.jpg");
   text-align: center;
   color: white;
-  background-repeat: no-repeat;
 }
 
-#breakfast:hover {
-  background: rgba(255, 255, 255, 0.2);
+#breakfast h4 {
+  position: absolute;
+  top: 40%;
+  width: 100%;
+}
+
+#breakfast:hover h4 {
+  background: rgba(255, 255, 255, 0.3);
   color: black;
   overflow: hidden;
+  padding: 26% 26%;
+  top: 0;
   transition: .5s;
 }
 
-.food {
-  padding-top: 85px;
-  font-style: italic;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
 #lunch {
-  background: url("../imgs/foodtop/lunch.jpg");
   text-align: center;
   color: white;
-  background-repeat: no-repeat;
-  opacity: 0.5;
+  position: relative;
+  width: 100%;
 }
 
-#lunch:hover {
-  background: rgba(255, 255, 255, 0.6);
+#lunch h4 {
+  position: absolute;
+  top: 40%;
+  width: 100%;
+}
+
+#lunch:hover h4 {
+  background: rgba(255, 255, 255, 0.3);
   color: black;
   overflow: hidden;
+  padding: 26% 26%;
+  top: 0;
   transition: .5s;
 }
 
 #dinner {
-  background: url("../imgs/foodtop/dinner.jpg");
   text-align: center;
   color: white;
-  background-repeat: no-repeat;
+  position: relative;
+  width: 100%;
 }
 
-#dinner:hover {
-  background: rgba(255, 255, 255, 0.2);
+#dinner h4 {
+  position: absolute;
+  top: 40%;
+  width: 100%;
+}
+
+#dinner:hover h4 {
+  background: rgba(255, 255, 255, 0.3);
   color: black;
   overflow: hidden;
+  padding: 26% 26%;
+  top: 0;
   transition: .5s;
 }
 
@@ -66,14 +81,14 @@
 
 #happy-hour {
   background-color: #F15A29;
-  padding: 35px;
+  padding: 8.5%;
   box-sizing: border-box;
   text-align: center;
 }
 
 #party-time {
   background-color: #ebedef;
-  padding: 35px;
+  padding: 8.5%;
   box-sizing: border-box;
   text-align: center;
 }
@@ -81,11 +96,6 @@
 .col-md-3 {
   padding-left: 0;
   padding-right: 0;
-}
-
-.options-bg .jumbotron .container-fluid .col-md-4 {
-  margin-left: 0;
-  margin-right: 0;
 }
 
 .Fastfood-text {
@@ -167,19 +177,21 @@ button {
   background-color: white;
   padding-top: 0px;
   margin: 100px;
-}
-
-.options-bg {
+  padding-left: 6%;
+  padding-right: 6%;
+  padding-bottom: 0%;
   text-align: center;
-  color: #F15A29;
 }
-
-.options-bg .col-md-3 p {
+.options-bg .Foods p {
   color: black;
+  margin-top: 5%;
+  margin-bottom: 0%;
+  color: #F15A29
 }
 
 .section {
   background-color: #ebedef;
+  margin: 0;
 }
 
 .section p {
@@ -193,6 +205,13 @@ button {
   background-color: white;
 }
 
+.Foods {
+  margin-top: 3%;
+  padding-bottom: 3%;
+  margin-left: 5%
+  margin-right: 5%;
+}
+
 .customers {
   background-color: white;
 }
@@ -201,8 +220,8 @@ button {
   background-color: white;
   box-shadow: 2px 4px 12px 2px #DCDCDC;
   border-radius: 0px;
-  margin: 7% 10%;
-  padding: 2rem 2rem 2rem;
+  margin: 5% 7%;
+  padding: 3% 3% 3%;
 }
 
 .txt-orange {
@@ -221,7 +240,7 @@ button {
 .happy-customers-text {
   text-align: center;
   font-size: 18px;
-  padding: 0% 10%;
+  padding: 0% 8%;
 }
 
 .footer-bg {
